<!--
  ~ Created by Naveen Kumar on 3/23/20 5:33 PM
  ~ Copyright (c) 2020. All rights reserved.
  -->

<resources>
    <string name="app_name">COVID-19 Tracker IN</string>
    <string name="ringkasan">Ringkasan</string>
    <string name="indonesia">India</string>
    <string name="info">Info</string>
    <string name="riwayat">Statistik</string>
    <string name="change_languange_setting">Change Languange Setting</string>
    <string name="title_dashboard">Info</string>
    <string name="not_update">Data Riwayat Belum Di Update</string>
    <string name="confirmed">Terkonfirmasi</string>
    <string name="recovered">Sembuh</string>
    <string name="deaths">Kematian</string>
    <string name="todaydeaths">hari ini kematian</string>
    <string name="active">aktif</string>
    <string name="keterangan">Ket :</string>
    <string name="indiastats">Statistik tentang India: </string>
    <string name="world_summary_data">Ringkasan Data Dunia</string>
    <string name="from_corona">Dari Covid-19</string>
    <string name="last_update">Last Update</string>
    <string name="indonesia_summary_data">Ringkasan Data India</string>
    <string name="please_wait">Mohon Tunggu</string>
    <string name="display_data">Sedang menampilkan data...</string>
    <string name="country">Negara : </string>
</resources>
